--- a/index.html
+++ b/index.html
@@ -142,6 +142,31 @@
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
               </div>
+              <ul class="socials-list">
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                  <svg class="socials-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a></li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                  <svg class="socials-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg></a></li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                  <svg class="socials-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a></li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                  <svg class="socials-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a></li>
+              </ul>
             </li>
             <li class="team-img">
               <img
@@ -154,6 +179,35 @@
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
               </div>
+              <ul class="socials-list">
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-img">
               <img
@@ -166,6 +220,35 @@
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
               </div>
+              <ul class="socials-list">
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team-img">
               <img
@@ -178,6 +261,35 @@
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
               </div>
+              <ul class="socials-list">
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg></a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="socials-item">
+                  <a class="socials-link" href="">
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
