--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <div class="footer-content">
           <a class="site-logo footer-logo" href="./index.html"
             ><span class="logo">Web</span>Studio</a
@@ -306,7 +306,39 @@
             digital marketing & growth solutions.
           </p>
         </div>
-      </div>
+      
+      <div class="footer-content">
+        <h2>Social media</h2>
+        <ul class="footer-socials-list">
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="">
+              <svg class="footer-socials-icon">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="">
+              <svg class="footer-socials-icon">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg></a>
+          </li>
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="">
+              <svg class="footer-socials-icon">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="">
+              <svg class="footer-socials-icon">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div></div>
     </footer>
   </body>
 </html>
