--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <header class="header">
       <div class="container header-container">
         <a class="site-logo header-logo" href="./index.html"
-          ><span class="logo">Web</span>Studio</a
-        >
+          ><span class="logo">Web</span>Studio</a>
         <nav class="header-nav">
           <ul class="header-menu">
             <li>
@@ -40,13 +39,11 @@
           <ul class="header-menu">
             <li>
               <a class="header-contact" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+                >info@devstudio.com</a>
             </li>
             <li>
               <a class="header-contact" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+                >+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -145,27 +142,31 @@
               <ul class="socials-list">
                 <li class="socials-item">
                   <a class="socials-link" href="">
-                  <svg class="socials-icon">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a></li>
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
                 <li class="socials-item">
                   <a class="socials-link" href="">
-                  <svg class="socials-icon">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg></a></li>
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use></svg>
+                    </a>
+                </li>
                 <li class="socials-item">
                   <a class="socials-link" href="">
-                  <svg class="socials-icon">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a></li>
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
                 <li class="socials-item">
                   <a class="socials-link" href="">
-                  <svg class="socials-icon">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a></li>
+                    <svg class="socials-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
               </ul>
             </li>
             <li class="team-img">
@@ -190,8 +191,8 @@
                 <li class="socials-item">
                   <a class="socials-link" href="">
                     <svg class="socials-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg></a>
+                      <use href="./images/icons.svg#icon-twitter"></use></svg>
+                    </a>
                 </li>
                 <li class="socials-item">
                   <a class="socials-link" href="">
@@ -231,8 +232,8 @@
                 <li class="socials-item">
                   <a class="socials-link" href="">
                     <svg class="socials-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg></a>
+                      <use href="./images/icons.svg#icon-twitter"></use></svg>
+                    </a>
                 </li>
                 <li class="socials-item">
                   <a class="socials-link" href="">
@@ -272,8 +273,8 @@
                 <li class="socials-item">
                   <a class="socials-link" href="">
                     <svg class="socials-icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg></a>
+                      <use href="./images/icons.svg#icon-twitter"></use></svg>
+                    </a>
                 </li>
                 <li class="socials-item">
                   <a class="socials-link" href="">
@@ -306,39 +307,40 @@
             digital marketing & growth solutions.
           </p>
         </div>
-      
-      <div class="footer-content">
-        <h2>Social media</h2>
-        <ul class="footer-socials-list">
-          <li class="footer-socials-item">
-            <a class="footer-socials-link" href="">
-              <svg class="footer-socials-icon">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-socials-item">
-            <a class="footer-socials-link" href="">
-              <svg class="footer-socials-icon">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg></a>
-          </li>
-          <li class="footer-socials-item">
-            <a class="footer-socials-link" href="">
-              <svg class="footer-socials-icon">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-socials-item">
-            <a class="footer-socials-link" href="">
-              <svg class="footer-socials-icon">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div></div>
+
+        <div class="footer-content">
+          <h2>Social media</h2>
+          <ul class="footer-socials-list">
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="">
+                <svg class="footer-socials-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="">
+                <svg class="footer-socials-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use></svg>
+                </a>
+            </li>
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="">
+                <svg class="footer-socials-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="">
+                <svg class="footer-socials-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
