--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,7 @@
     <header class="header">
       <div class="container header-container">
         <a class="site-logo header-logo" href="./index.html"
-          ><span class="logo">Web</span>Studio</a
-        >
+          ><span class="logo">Web</span>Studio</a>
         <nav class="header-nav">
           <ul class="header-menu">
             <li>
@@ -40,13 +39,11 @@
           <ul class="header-menu">
             <li>
               <a class="header-contact" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+                >info@devstudio.com</a>
             </li>
             <li>
               <a class="header-contact" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
-              >
+                >+11 (000) 111-11-11</a>
             </li>
           </ul>
         </address>
@@ -194,13 +191,15 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-content">
-          <a class="site-logo footer-logo" href="./index.html"><span class="logo">Web</span>Studio</a>
+          <a class="site-logo footer-logo" href="./index.html"
+            ><span class="logo">Web</span>Studio</a
+          >
           <p class="footer-text">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
         </div>
-    
+
         <div class="footer-content">
           <h2>Social media</h2>
           <ul class="footer-socials-list">
@@ -214,8 +213,8 @@
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
                 <svg class="footer-socials-icon">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg></a>
+                  <use href="./images/icons.svg#icon-twitter"></use></svg>
+                </a>
             </li>
             <li class="footer-socials-item">
               <a class="footer-socials-link" href="">
