Added Customers section

--- a/index.html
+++ b/index.html
@@ -296,6 +296,55 @@
         </div>
       </section>
     </main>
+    <section class="customers">
+    <div class="container">
+      <h2>Customers</h2>
+      <ul class="customers-list">
+        <li class="customers-item">
+          <a class="customers-link" href="">
+            <svg class="customers-icon">
+              <use href="./images/icons.svg#icon-custom1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="customers-item">
+          <a class="customers-link" href="">
+            <svg class="customers-icon">
+              <use href="./images/icons.svg#icon-custom2"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="customers-item">
+          <a class="customers-link" href="">
+            <svg class="customers-icon">
+              <use href="./images/icons.svg#icon-custom3"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="customers-item">
+          <a class="customers-link" href="">
+            <svg class="customers-icon">
+              <use href="./images/icons.svg#icon-custom4"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="customers-item">
+          <a class="customers-link" href="">
+            <svg class="customers-icon">
+              <use href="./images/icons.svg#icon-custom5"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="customers-item">
+          <a class="customers-link" href="">
+            <svg class="customers-icon">
+              <use href="./images/icons.svg#icon-custom6"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    </section>
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-content">
