Added css for customers section

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
       </section>
     </main>
-    <section class="customers">
+    <section class="customers section">
     <div class="container">
       <h2>Customers</h2>
       <ul class="customers-list">
