Added bg-image for hero section

--- a/index.html
+++ b/index.html
@@ -60,28 +60,35 @@
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
-            <li>
+            <li class="advantages-item"><svg class="advantages-icon"><use href="./images/icons.svg#icon-antenna1"></use>
+            </svg>
               <h3>Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="advantages-item"><svg class="advantages-icon">
+                <use class="advantages-image" href="./images/icons.svg#icon-clock2"></use>
+              </svg>
               <h3>Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="advantages-item"><svg class="advantages-icon">
+              <use href="./images/icons.svg#icon-diagram3"></use>
+            </svg>
               <h3>Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="advantages-item"><svg class="advantages-icon">
+              <use href="./images/icons.svg#icon-astronaut4"></use>
+            </svg>
               <h3>Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
