--- a/index.html
+++ b/index.html
@@ -60,35 +60,41 @@
         <div class="container">
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
-            <li class="advantages-item"><svg class="advantages-icon"><use href="./images/icons.svg#icon-antenna1"></use>
-            </svg>
+            <li class="advantages-item">
+              <div class="advantages-block">
+              <svg class="advantages-icon"><use href="./images/icons.svg#icon-antenna1"></use>
+            </svg></div>
               <h3>Strategy</h3>
               <p>
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="advantages-item"><svg class="advantages-icon">
+            <li class="advantages-item">
+              <div class="advantages-block">
+              <svg class="advantages-icon">
                 <use class="advantages-image" href="./images/icons.svg#icon-clock2"></use>
-              </svg>
+              </svg></div>
               <h3>Punctuality</h3>
               <p>
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="advantages-item"><svg class="advantages-icon">
+            <li class="advantages-item">
+              <div class="advantages-block"><svg class="advantages-icon">
               <use href="./images/icons.svg#icon-diagram3"></use>
-            </svg>
+            </svg></div>
               <h3>Diligence</h3>
               <p>
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="advantages-item"><svg class="advantages-icon">
+            <li class="advantages-item"><div class="advantages-block">
+              <svg class="advantages-icon">
               <use href="./images/icons.svg#icon-astronaut4"></use>
-            </svg>
+            </svg></div>
               <h3>Technologies</h3>
               <p>
                 Design practice focused on digital experiences. We bring forth a
